pob-release is a devDependency

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "peerDependencies": {
     "react": "^15.3.0"
   },
-  "dependencies": {
+  "devDependencies": {
     "pob-release": "^2.0.5"
   }
 }
