--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
   },
   "homepage": "https://github.com/christophehurpeau/react-pure-stateless-component#readme",
   "peerDependencies": {
-    "react": "^15.3.0"
+    "react": "^15.3.0 || ^16.0.0-alpha.12"
   },
   "devDependencies": {
-    "pob-release": "^2.0.5"
+    "pob-release": "^3.1.0",
+    "react": "^16.0.0-alpha.12"
+  },
+  "dependencies": {
+    "create-react-class": "^15.5.3"
   }
 }
